# split-async

./: .rustfmt.toml  Cargo.toml  LICENSE  README.md
src/: lib.rs  parse.rs  util.rs  visit.rs
tests/: test.rs  unit-test-util.rs
tests/cases/function/choose/: 01_basic.expanded.rs  01_basic.rs  02_split_choose.expanded.rs  02_split_choose.rs  03_multi.expanded.rs  03_multi.rs  04_path.expanded.rs  04_path.rs
tests/cases/function/choose_fail/: 01_wrong_ident.rs  01_wrong_ident.stderr
tests/cases/function/expand/: 01_basic.expanded.rs  01_basic.rs  02_names.expanded.rs  02_names.rs  03_expressions.expanded.rs  03_expressions.rs  04_nested_items.expanded.rs  04_nested_items.rs  05_nested_mixed.expanded.rs  05_nested_mixed.rs
tests/cases/function/expand_fail/: 01_not_async.rs  01_not_async.stderr  02_rename_three_names.rs  02_rename_three_names.stderr  03_rename_same_name.rs  03_rename_same_name.stderr
