[package]
name = "split-async"
version = "0.1.0"
authors = ["Pietro Gorilskij <contact@gorilskij.com>"]
edition = "2024"
readme = "README.md"
license = "MIT"
description = "A procedural macro to generate sync and async versions of a function"
repository = "https://github.com/gorilskij/split-async"
documentation = "https://docs.rs/split-async"
keywords = ["async", "blocking", "proc-macro", "codegen", "function-generation"]

[dependencies]
derive_more = { version = "2.0.1", features = ["from"] }
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["visit-mut", "full", "extra-traits"] }

[lib]
proc-macro = true
path = "src/lib.rs"

[badges.maintenance]
status = "actively-developed"

[dev-dependencies]
async-std = { version = "1", features = ["attributes"] }
async-trait = "0.1"
macrotest = "1.1"
# tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
trybuild = { version = "1", features = ["diff"] }
